백엔드 배포
DB도 처리 필요 이 이후로 이제 요약보기가 다 비활성화될 거임